# ad983x-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
examples/: linux.rs
src/: ad9833_ad9837.rs  ad9834_ad9838.rs  common.rs  lib.rs
tests/: integration.rs
tests/base/: mod.rs
