[package]
name = "ad983x"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/ad983x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the AD9833/AD9837 low-power programmable waveform generators / direct digital synthesizers."
readme = "README.md"
keywords = ["waveform", "generator", "dds", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/ad983x-rs"
documentation = "https://docs.rs/ad983x"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/ad983x-rs", branch = "master" }
coveralls = { repository = "eldruin/ad983x-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"

[profile.release]
lto = true
